# Financial-Risk-Analytics-ML-Platforms

./: .env.example  .gitignore  DASHBOARD_TROUBLESHOOTING.md  DockerFile  Dockerfile  README.md  alembic.ini  docker-compose.yml  filestructure.md  init_db.py  main.py  nginx.conf  pyproject.toml  requirements.txt  ryomenhaider-README.md  supervisord.conf  test_api.py
airflow/: simple_auth_manager_passwords.json.generated
airflow/dags/: dag_macro.py  dag_news.py  dag_prices.py  dag_retrain.py
api/: main.py  schemas.py
api/routers/: anomalies.py  forecasts.py  portfolio.py  prices.py  sentiment.py
config/: logging_config.py  settings.py
dashboard/: app.py  theme.py
dashboard/assets/: custom.css  theme.css
dashboard/components/: sidebar.py
dashboard/pages/: anomalies.py  forecasts.py  overview.py  portfolio.py  sentiment.py
database/: connection.py  crud.py  models.py  schema.sql  seed_data.sql
database/cmd/: 1.sql
database/migrations/: env.py
database/migrations/versions/: 001_initial.py
deploy/: aws_setup.sh
ingestion/: crypto_fetcher.py  feature_engineer.py  ingestion_pipeline.py  macro_fetcher.py  news_fetcher.py  price_fetcher.py
ml/: anomaly_detector.py  feature_store.py  forecaster.py  model_registry.py  portfolio_optimizer.py  sentiment_engine.py  train_pipeline.py
mlartifacts/1/models/m-3de7b59167ca4e55b15981f7acc09153/artifacts/: MLmodel  conda.yaml  model.pkl
mlops/: __init__.py  drift_detector.py
src/ingestion/: crypto_ingestor.py
