[project]
name = "financial-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "apache-airflow>=2.10.5",
    "ccxt>=4.5.40",
    "dotenv>=0.9.9",
    "graphviz>=0.21",
    "mlflow>=2.10.0",
    "pandas<3",
    "prophet>=1.3.0",
    "protobuf>=4.25.0,<5.0.0",
    "psycopg2-binary==2.9.9",
    "pyod>=2.0.6",
    "pypi>=2.1",
    "requests-ratelimiter>=0.9.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.47",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]
[tool.uv]
environments = ["sys_platform == 'linux'"]
